<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
    style="@style/Relative_Layout">



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">

        <TextView
            android:id="@+id/user_password_fragment_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/user_password_fragment_text_view"
            android:text="Step 2 of 8"
            android:textSize="26sp"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/user_password_fragment_password_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/user_password_fragment_text_view"
            android:layout_marginLeft="4dp"
            android:text="Create Password"
            android:textSize="20sp"
            style="@style/TextView"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_below="@id/user_password_fragment_password_text_view">

            <EditText
                android:id="@+id/user_password_fragment"

                android:inputType="textPassword"
                android:imeOptions="actionNext"
                android:nextFocusDown="@id/user_confirm_password_fragment"
                android:hint="@string/password"
                style="@style/Edittext"/>

            <EditText
                android:id="@+id/user_confirm_password_fragment"
                android:inputType="textPassword"
                android:imeOptions="actionDone"
                android:layout_below="@id/user_password_fragment"
                android:layout_centerHorizontal="true"
                android:hint="@string/confirmpassword"
                style="@style/Edittext"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/user_confirm_password_fragment"
                android:layout_centerHorizontal="true"
                android:layout_alignParentRight="true"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/user_password_back_button"
                    android:text="@string/back"
                    style="@style/Button"/>
                <Button
                    android:id="@+id/user_password_next_button"
                    android:text="@string/next"
                    style="@style/Button"/>
            </LinearLayout>
        </RelativeLayout>



    </RelativeLayout>

</RelativeLayout>