<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
    style="@style/Relative_Layout">



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">

        <TextView
            android:id="@+id/user_interest_fragment_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Step 5 of 8"
            android:textSize="26sp"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/user_interest_fragment_preference_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/user_interest_fragment_text_view"
            android:layout_marginLeft="4dp"
            android:text="User Preference"
            android:textSize="20sp"
            style="@style/TextView"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_below="@id/user_interest_fragment_preference_text_view">

            <LinearLayout
                android:id="@+id/user_interest_fragment_gender_preference_linear_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:text="@string/gender"
                    android:layout_marginLeft="4dp"
                    android:layout_marginRight="10dp"
                    style="@style/TextView"/>

                <Spinner
                    android:id="@+id/user_interest_fragment_gender_interest_spinner"
                    android:layout_width="match_parent"
                    android:entries="@array/gender_interest"
                    android:dropDownWidth="75dp"
                    style="@style/Spinner"/>

            </LinearLayout>


            <LinearLayout
                android:id="@+id/user_interest_fragment_age_linear_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/user_interest_fragment_gender_preference_linear_layout"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:text="@string/age"
                    android:layout_marginLeft="4dp"
                    android:layout_marginRight="10dp"
                    android:gravity="center_vertical"
                    style="@style/TextView"/>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:text="@string/min"
                        android:textSize="10sp"
                        android:gravity="center_vertical"
                        style="@style/TextView"/>

                    <Spinner
                        android:id="@+id/user_interest_fragment_gender_minimum_age_spinner"
                        android:layout_width="match_parent"
                        style="@style/TextView"
                        />

                </LinearLayout>


                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:text="@string/max"
                        android:textSize="10sp"
                        android:gravity="center_vertical"
                        style="@style/TextView"/>

                    <Spinner
                        android:id="@+id/user_interest_fragment_gender_maximum_age_spinner"
                        android:layout_width="match_parent"
                        style="@style/TextView"
                        />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/user_interest_fragment_age_linear_layout"
                android:layout_centerHorizontal="true"
                android:layout_alignParentRight="true"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/user_interest_fragment_back_button"
                    android:text="@string/back"
                    style="@style/Button"/>
                <Button
                    android:id="@+id/user_interest_fragment_next_button"
                    android:text="@string/next"
                    style="@style/Button"/>

            </LinearLayout>

        </RelativeLayout>

    </RelativeLayout>

</RelativeLayout>