<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:focusable="true"
                android:focusableInTouchMode="true"
    style="@style/Relative_Layout">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">

        <TextView
            android:id="@+id/user_info_2_fragment_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Step 4 of 8"
            android:textSize="26sp"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/user_info_2_fragment_personal_info_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/user_info_2_fragment_text_view"
            android:layout_marginLeft="4dp"
            android:text="Personal Information"
            android:textSize="20sp"
            style="@style/TextView"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_below="@id/user_info_2_fragment_personal_info_text_view">

            <EditText
                android:id="@+id/user_info_2_fragment_birthday_edittext"

                android:layout_width="100dp"
                android:hint="@string/birthday"
                style="@style/Edittext"/>

            <LinearLayout
                android:id="@+id/user_info_2_fragment_gender_linear_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/user_info_2_fragment_birthday_edittext"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:text="@string/gender"
                    android:layout_marginLeft="4dp"
                    android:layout_marginRight="10dp"
                    style="@style/TextView"/>
                <Spinner
                    android:id="@+id/user_info_2_fragment_gender_spinner"
                    android:layout_width="match_parent"
                    android:layout_below="@id/user_info_2_fragment_birthday_edittext"
                    android:dropDownWidth="75dp"
                    android:entries="@array/user_gender"
                    style="@style/Spinner"/>
            </LinearLayout>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/user_info_2_fragment_gender_linear_layout"
                android:layout_centerHorizontal="true"
                android:layout_alignParentRight="true"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/user_info_2_fragment_back_button"
                    android:text="@string/back"
                    style="@style/Button"/>
                <Button
                    android:id="@+id/user_info_2_fragment_next_button"
                    android:text="@string/next"
                    style="@style/Button"/>

            </LinearLayout>

        </RelativeLayout>



    </RelativeLayout>


</RelativeLayout>